--- a/index.html
+++ b/index.html
@@ -204,9 +204,8 @@
                 <br><br><br>
                 <label>How did you hear about us? (optional) 
                 <br>
-                <input list="browsers" name="myBrowser" placeholder="Click to Select"></label>
-                    <datalist id="browsers">
-                      <option value="Facebook">Facebook</option>
+		<select name="findUs" >
+		      <option value="Facebook">Facebook</option>
                       <option value="Twitter">Twitter</option>
                       <option value="Instagram">Instagram</option>
                       <option value="friend/family/Co-worker referal">friend/family/Co-worker referal</option>
@@ -215,9 +214,10 @@
                       <option value= "Online Blog">Online Blog</option>
                       <option value= "Local Newspaper">Local Newspaper</option>
                       <option value= "At an Event">At an Event</option>
-                      <option value= "Other">Other</option>    
-                    </datalist>
-                 
+                      <option value= "Other">Other</option>
+		
+		</select>	
+                
                 <br><br>
                 <input name="Create Account" type="button" value="Create Account" id="submit">
 
