--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
                 font-family: sans-serif;
 
 			}
+	    select{
+		    border-radius:5px; 
+				padding: 12px;
+				width: 350px;
+				font-size: 1.0em;
+				margin-top: 3px;
+                align-content: center;
+                margin-left: 10px;
+                font-family: sans-serif;
+	    
+	    }
         label{
                 font-size: 0.75em;
                 margin-top: 50px;
@@ -205,6 +216,7 @@
                 <label>How did you hear about us? (optional) 
                 <br>
 		<select name="findUs" >
+			<option>Click to Select</option>
 		      <option value="Facebook">Facebook</option>
                       <option value="Twitter">Twitter</option>
                       <option value="Instagram">Instagram</option>
