--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 align-content: center;
                 margin-left: 10px;
                 font-family: sans-serif;
+		    width:380px;
 	    
 	    }
         label{
