--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         img{
             height: 55px;
             margin-top: 30px;
-            margin-left: 550px;
+            margin-left: 42%;
         }
 
         #formWrapper {
